Adicionando o ícone da logo em link
Adicionando o ícone da logo em link <a></a> com referencia na homepage, além de adicionar o mesmo link na aba Inicio e no texto da logo

--- a/homepage.html
+++ b/homepage.html
@@ -17,11 +17,11 @@
       <header class="hoverHeader">
         <div class="titleBar">
           <div class="logoArea">
-          <img src="cdXico.png" class="logoImg">
-          <a href="/" class="logoText">Codex Elyvus RPG</a>
+          <a href="/homepage.html"><img src="cdXico.png" class="logoImg"></a>
+          <a href="/homepage.html" class="logoText">Codex Elyvus RPG</a>
           </div>
           <nav>
-            <a href="/" class="linkNav">Início</a>
+            <a href="/homepage.html" class="linkNav">Início</a>
             <a href="/classes" class="linkNav">Classes</a>
             <a href="/itens" class="linkNav">Itens</a>
             <a href="/ambientes" class="linkNav">Ambientes</a>
