Ajustando os highlights em CSS
Fazendo ajustes na estilização em CSS para os highlights da homepage

--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="overlayBackground">
-    <div class="conteudoSobreOverlay">
+    <div class="overlayContentOnTop">
       <!-- Header -->
       <header class="hoverHeader">
         <div class="titleBar">
@@ -33,13 +33,13 @@
       </header>
 
       <!-- Hero Section -->
-      <section class="bg-hero-pattern bg-cover bg-center py-20 px-4 text-center">
-        <div class="max-w-3xl mx-auto">
-          <h2 class="text-5xl font-bold text-yellow-400 mb-6">Forje sua Lenda</h2>
-          <p class="text-lg mb-8 text-gray-300">Um universo onde clima, monstros e magia moldam o destino dos heróis. Explore terras selvagens, enfrente horrores antigos e escreva sua própria história.</p>
-          <div class="space-x-4">
-            <a href="/regras" class="bg-yellow-500 hover:bg-yellow-600 text-black px-6 py-3 rounded-full font-semibold">📜 Ver Regras</a>
-            <a href="/classes" class="bg-transparent border border-yellow-400 hover:bg-yellow-500 text-yellow-400 hover:text-black px-6 py-3 rounded-full font-semibold">🎲 Criar Personagem</a>
+      <section class="heroSection">
+        <div class="containerCentralizer">
+          <h2 class="titleHighlight">Forje sua Lenda</h2>
+          <p class="paragraphHighlight">Um universo onde clima, monstros e magia moldam o destino dos heróis. Explore terras selvagens, enfrente horrores antigos e escreva sua própria história.</p>
+          <div class="firstButtons">
+            <a href="/regras" class="mainButton">📜 Ver Regras</a>
+            <a href="/classes" class="secondButton">🎲 Criar Personagem</a>
           </div>
         </div>
       </section>
