--- a/homepage.html
+++ b/homepage.html
@@ -22,11 +22,11 @@
           </div>
           <nav>
             <a href="/homepage.html" class="linkNav">Início</a>
-            <a href="/classes" class="linkNav">Classes</a>
-            <a href="/itens" class="linkNav">Itens</a>
-            <a href="/ambientes" class="linkNav">Ambientes</a>
+            <a href="/mundos" class="linkNav">Mundos</a>
+            <a href="/personagens" class="linkNav">Personagens</a>
             <a href="/regras" class="linkNav">Regras</a>
-            <a href="/bestiario" class="linkNav">Bestiário</a>
+            <a href="/itens" class="linkNav">Itens</a>
+            <a href="/criaturas" class="linkNav">Criaturas</a>
             <a href="/sobre" class="linkNav">Sobre</a>
           </nav>
         </div>
@@ -44,38 +44,38 @@
         </div>
       </section>
 
-      <!-- Seções de Destaque -->
-      <section class="max-w-6xl mx-auto px-4 py-16">
-        <h3 class="text-3xl font-bold text-center mb-10 text-yellow-300">Explore o Mundo de Codex</h3>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <!-- Seções de Mundos -->
+      <section class="containerCentralizer2">
+        <h3 class="titleHighlight2">Explore os Mundos de Codex Elyvus</h3>
+        <div class="gridResponsive">
 
-          <a href="/classes" class="bg-gray-800 hover:bg-gray-700 rounded-xl p-6 shadow-lg transition">
-            <h4 class="text-xl font-bold mb-2">🧙‍♂️ Classes</h4>
+          <a href="/classes" class="cardInteractive">
+            <h4 class="cardText">🧙‍♂️ Classes</h4>
             <p>Conheça todas as classes disponíveis, de místicos a guerreiros selvagens.</p>
           </a>
 
-          <a href="/itens" class="bg-gray-800 hover:bg-gray-700 rounded-xl p-6 shadow-lg transition">
-            <h4 class="text-xl font-bold mb-2">🛡️ Itens</h4>
+          <a href="/itens" class="cardInteractive">
+            <h4 class="cardText">🛡️ Itens</h4>
             <p>Descubra armas, armaduras e relíquias com poderes únicos.</p>
           </a>
 
-          <a href="/ambientes" class="bg-gray-800 hover:bg-gray-700 rounded-xl p-6 shadow-lg transition">
-            <h4 class="text-xl font-bold mb-2">🌍 Ambientes</h4>
+          <a href="/ambientes" class="cardInteractive">
+            <h4 class="cardText">🌍 Ambientes</h4>
             <p>Terrenos, regiões e eventos climáticos que influenciam o jogo.</p>
           </a>
 
-          <a href="/bestiario" class="bg-gray-800 hover:bg-gray-700 rounded-xl p-6 shadow-lg transition">
-            <h4 class="text-xl font-bold mb-2">🧟 Bestiário</h4>
+          <a href="/bestiario" class="cardInteractive">
+            <h4 class="cardText">🧟 Bestiário</h4>
             <p>Enfrente monstros aterradores e criaturas míticas.</p>
           </a>
 
-          <a href="/regras" class="bg-gray-800 hover:bg-gray-700 rounded-xl p-6 shadow-lg transition">
-            <h4 class="text-xl font-bold mb-2">📘 Regras</h4>
+          <a href="/regras" class="cardInteractive">
+            <h4 class="cardText">📘 Regras</h4>
             <p>Conheça o sistema único que rege batalhas, magia e evolução.</p>
           </a>
 
-          <a href="/sobre" class="bg-gray-800 hover:bg-gray-700 rounded-xl p-6 shadow-lg transition">
-            <h4 class="text-xl font-bold mb-2">📜 Sobre o Projeto</h4>
+          <a href="/sobre" class="cardInteractive">
+            <h4 class="cardText">📜 Sobre o Projeto</h4>
             <p>Saiba mais sobre os criadores, propósito e futuro do Codex RPG.</p>
           </a>
 
@@ -83,7 +83,7 @@
       </section>
 
       <!-- Rodapé -->
-      <footer class="bg-gray-800 text-gray-400 text-sm py-6 px-4 text-center">
+      <footer class="footerText">
         <p>&copy; 2025 Codex Elyvus RPG. Todos os direitos reservados.</p>
         <p>Desenvolvido por Pedro Melo.</p>
       </footer>
