--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Codex Elyvus RPG</title>
+  <link rel="icon" href="iconCDXLVS.ico" type="image/ico" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet" />
@@ -36,7 +37,7 @@
       <section class="heroSection">
         <div class="containerCentralizer">
           <h2 class="titleHighlight">Forje sua Lenda</h2>
-          <p class="paragraphHighlight">Um universo onde clima, monstros e magia moldam o destino dos heróis. Explore terras selvagens, enfrente horrores antigos e escreva sua própria história.</p>
+          <p class="paragraphHighlight">Um universo onde o ambiente, a magia e os perigos moldam o destino dos heróis. Explore terras distantes, enfrente horrores antigos e escreva sua própria história.</p>
           <div class="firstButtons">
             <a href="/regras" class="mainButton">📜 Ver Regras</a>
             <a href="/classes" class="secondButton">🎲 Criar Personagem</a>
