Atualizações de cardInteractive
Acréscimo da pasta cardInteractive

--- a/homepage.html
+++ b/homepage.html
@@ -8,8 +8,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="sitestyle.css"/>
-  
+  <link rel="stylesheet" href="siteStyle.css"/>
+  <link rel="stylesheet" href="cardInteractive/cardInteractiveStyle.css"/>
+
 </head>
 <body>
   <div class="overlayBackground">
@@ -50,34 +51,34 @@
         <h3 class="titleHighlight2">Explore os Mundos de Codex Elyvus</h3>
         <div class="gridResponsive">
 
-          <a href="/classes" class="cardInteractive">
-            <h4 class="cardText">🧙‍♂️ Classes</h4>
-            <p>Conheça todas as classes disponíveis, de místicos a guerreiros selvagens.</p>
+          <a href="/mundos" class="cardInteractive1">
+            <h4 class="cardTitle">Mundos</h4>
+            <p class="cardText">Terrenos, regiões e eventos climáticos que intensificam as aventuras.</p>
           </a>
 
-          <a href="/itens" class="cardInteractive">
-            <h4 class="cardText">🛡️ Itens</h4>
-            <p>Descubra armas, armaduras e relíquias com poderes únicos.</p>
+          <a href="/personagens" class="cardInteractive2">
+            <h4 class="cardTitle">Personagens</h4>
+            <p class="cardText">Conheça todas as formas de criar seu personagem, desde classes, linhagens e talentos únicos.</p>
           </a>
 
-          <a href="/ambientes" class="cardInteractive">
-            <h4 class="cardText">🌍 Ambientes</h4>
-            <p>Terrenos, regiões e eventos climáticos que influenciam o jogo.</p>
+          <a href="/regras" class="cardInteractive3">
+            <h4 class="cardTitle">Regras</h4>
+            <p class="cardText">Conheça o sistema único que rege batalhas, magia e evolução.</p>
           </a>
 
-          <a href="/bestiario" class="cardInteractive">
-            <h4 class="cardText">🧟 Bestiário</h4>
-            <p>Enfrente monstros aterradores e criaturas míticas.</p>
+          <a href="/itens" class="cardInteractive4">
+            <h4 class="cardTitle">Itens</h4>
+            <p class="cardText">Descubra armas, armaduras e relíquias com poderes e materiais fantásticos.</p>
           </a>
 
-          <a href="/regras" class="cardInteractive">
-            <h4 class="cardText">📘 Regras</h4>
-            <p>Conheça o sistema único que rege batalhas, magia e evolução.</p>
+           <a href="/criaturas" class="cardInteractive5">
+            <h4 class="cardTitle">Criaturas</h4>
+            <p class="cardText">Enfrente monstros aterradores e criaturas míticas.</p>
           </a>
 
-          <a href="/sobre" class="cardInteractive">
-            <h4 class="cardText">📜 Sobre o Projeto</h4>
-            <p>Saiba mais sobre os criadores, propósito e futuro do Codex RPG.</p>
+          <a href="/sobre" class="cardInteractive6">
+            <h4 class="cardTitle">Sobre o Projeto</h4>
+            <p class="cardText">Saiba mais sobre os criadores, propósito e futuro do Codex Elyvus RPG.</p>
           </a>
 
         </div>
