--- a/homepage.html
+++ b/homepage.html
@@ -25,7 +25,7 @@
           <nav>
             <a href="/homepage.html" class="linkNav">Início</a>
             <a href="/mundos" class="linkNav">Mundos</a>
-            <a href="/personagens" class="linkNav">Personagens</a>
+            <a href="/classesPages/personagens.html" class="linkNav">Personagens</a>
             <a href="/regras" class="linkNav">Regras</a>
             <a href="/itens" class="linkNav">Itens</a>
             <a href="/criaturas" class="linkNav">Criaturas</a>
@@ -40,8 +40,8 @@
           <h2 class="titleHighlight">Forje sua Lenda</h2>
           <p class="paragraphHighlight">Um universo onde o ambiente, a magia e os perigos moldam o destino dos heróis. Explore terras distantes, enfrente horrores antigos e escreva sua própria história.</p>
           <div class="firstButtons">
-            <a href="/regras" class="mainButton">📜 Ver Regras</a>
-            <a href="/classes" class="secondButton">🎲 Criar Personagem</a>
+            <a href="/regras" class="mainButton">Ver Regras</a>
+            <a href="/classesPages/personagens.html" class="secondButton">Criar Personagem</a>
           </div>
         </div>
       </section>
@@ -56,7 +56,7 @@
             <p class="cardText">Terrenos, regiões e eventos climáticos que intensificam as aventuras.</p>
           </a>
 
-          <a href="/personagens" class="cardInteractive2">
+          <a href="/classesPages/personagens.html" class="cardInteractive2">
             <h4 class="cardTitle">Personagens</h4>
             <p class="cardText">Conheça todas as formas de criar seu personagem, desde classes, linhagens e talentos únicos.</p>
           </a>
